# ESP-IDF-FIREBASE

./: CMakeLists.txt
main/: CMakeLists.txt  app_firebase.c  app_firebase.h  firebase.c  firebase.h  idf_component.yml  main.c  wifi_connect.c  wifi_connect.h
